--- a/src/main/resources/view/AnnotationListPanel.fxml
+++ b/src/main/resources/view/AnnotationListPanel.fxml
@@ -9,7 +9,7 @@
 
 <StackPane>
     <HBox>
-    <Label text="This document has no paragraphs to show." style="-fx-text-fill: #fff7bf"/>
+    <Label text="This document has no paragraphs to show." style="-fx-text-fill: #e4fcff"/>
     </HBox>
 
     <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
